<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddTaskBottomSheetFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/bottom_sheet_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/add_task_title"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="16pt"
            android:layout_gravity="center"
            android:layout_margin="20dp"/>

        <ImageView
            android:id="@+id/delete_task_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:src="@drawable/ic_baseline_delete_24"
            android:scaleType="fitCenter"
            android:layout_margin="20dp">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            app:hintEnabled="false"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="8pt"
                android:hint="@string/new_task_title"
                android:inputType="text"
                android:maxLines="1"
                android:background="@drawable/custom_input"
                android:paddingVertical="10dp"
                android:paddingHorizontal="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:src="@drawable/ic_outline_calendar_month_24"
            android:layout_marginEnd="20dp">
        </ImageView>

        <Button
            android:id="@+id/pick_date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:fontFamily="sans-serif"
            android:textSize="8pt"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingVertical="10dp"
            android:layout_marginEnd="100dp"
            style="?android:spinnerStyle"
            android:textAlignment="center">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:src="@drawable/ic_baseline_access_time_24"
            android:layout_marginEnd="20dp">
        </ImageView>

        <Button
            android:id="@+id/pick_time_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:fontFamily="sans-serif"
            android:textSize="8pt"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingVertical="10dp"
            android:layout_marginEnd="100dp"
            style="?android:spinnerStyle"
            android:textAlignment="center">
        </Button>

    </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            app:hintEnabled="false"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:lines="8"
                android:minLines="6"
                android:id="@+id/new_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="8pt"
                android:hint="@string/new_task_description"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                android:maxLines="1"
                android:background="@drawable/custom_input"
                android:paddingVertical="10dp"
                android:paddingHorizontal="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_task_button"
        android:fontFamily="sans-serif"
        android:textSize="8pt"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_activity"
        android:layout_margin="20dp"/>



</LinearLayout>